pp2/y.output
Useless nonterminals

   StmtS


Terminals which are not used

   T_Increment
   T_Decrement
   T_Switch
   T_Case
   T_Default


Useless rules

  103 StmtS: StmtS Stmt
  104      | /* empty */


Grammar

    0 $accept: Program $end

    1 Program: DeclP

    2 DeclP: DeclP Decl
    3      | Decl

    4 Decl: VarDecl
    5     | FnDecl
    6     | ClassDecl
    7     | InterfaceDecl

    8 VarDecl: Var ';'

    9 Var: Type T_Identifier

   10 Type: T_Int
   11     | T_Double
   12     | T_Bool
   13     | T_String
   14     | T_Identifier
   15     | Type T_Dims

   16 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock
   17       | T_Void T_Identifier '(' Formals ')' StmtBlock

   18 VarPC: VarPC ',' Var
   19      | Var

   20 Formals: VarPC
   21        | /* empty */

   22 IdentifierPC: IdentifierPC ',' T_Identifier
   23             | T_Identifier

   24 ExtendsO: T_Extends T_Identifier
   25         | /* empty */

   26 ImplementsO: T_Implements IdentifierPC
   27            | /* empty */

   28 FieldS: FieldS Field
   29       | /* empty */

   30 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' FieldS '}'

   31 Field: VarDecl
   32      | FnDecl

   33 PrototypeS: PrototypeS Prototype
   34           | /* empty */

   35 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS '}'

   36 Prototype: Type T_Identifier '(' Formals ')' ';'
   37          | T_Void T_Identifier '(' Formals ')' ';'

   38 StmtP: StmtP Stmt
   39      | Stmt

   40 VarDeclP: VarDeclP VarDecl
   41         | VarDecl

   42 StmtBlock: '{' VarDeclP StmtP '}'
   43          | '{' VarDeclP '}'
   44          | '{' StmtP '}'
   45          | '{' '}'

   46 ExprO: Expr
   47      | /* empty */

   48 Stmt: ExprO ';'
   49     | IfStmt
   50     | WhileStmt
   51     | ForStmt
   52     | BreakStmt
   53     | ReturnStmt
   54     | PrintStmt
   55     | StmtBlock

   56 ElseO: T_Else Stmt
   57      | /* empty */

   58 IfStmt: T_If '(' Expr ')' Stmt ElseO

   59 WhileStmt: T_While '(' Expr ')' Stmt

   60 ForStmt: T_For '(' ExprO ';' Expr ';' ExprO ')' Stmt

   61 ReturnStmt: T_Return ExprO ';'

   62 BreakStmt: T_Break ';'

   63 ExprPC: ExprPC ',' Expr
   64       | Expr

   65 PrintStmt: T_Print '(' ExprPC ')' ';'

   66 Expr: LValue '=' Expr
   67     | Constant
   68     | LValue
   69     | T_This
   70     | Call
   71     | '(' Expr ')'
   72     | Expr '+' Expr
   73     | Expr '-' Expr
   74     | Expr '*' Expr
   75     | Expr '/' Expr
   76     | Expr '%' Expr
   77     | '-' Expr
   78     | Expr '<' Expr
   79     | Expr T_LessEqual Expr
   80     | Expr '>' Expr
   81     | Expr T_GreaterEqual Expr
   82     | Expr T_Equal Expr
   83     | Expr T_NotEqual Expr
   84     | Expr T_And Expr
   85     | Expr T_Or Expr
   86     | '!' Expr
   87     | T_ReadInteger '(' ')'
   88     | T_ReadLine '(' ')'
   89     | T_New T_Identifier
   90     | T_NewArray '(' Expr ',' Type ')'

   91 LValue: T_Identifier
   92       | Expr '.' T_Identifier
   93       | Expr '[' Expr ']'

   94 Call: T_Identifier '(' Actuals ')'
   95     | Expr '.' T_Identifier '(' Actuals ')'

   96 Actuals: ExprPC
   97        | /* empty */

   98 Constant: T_IntConstant
   99         | T_DoubleConstant
  100         | T_BoolConstant
  101         | T_StringConstant
  102         | T_Null


Terminals, with rules where they appear

$end (0) 0
'!' (33) 86
'%' (37) 76
'(' (40) 16 17 36 37 58 59 60 65 71 87 88 90 94 95
')' (41) 16 17 36 37 58 59 60 65 71 87 88 90 94 95
'*' (42) 74
'+' (43) 72
',' (44) 18 22 63 90
'-' (45) 73 77
'.' (46) 92 95
'/' (47) 75
';' (59) 8 36 37 48 60 61 62 65
'<' (60) 78
'=' (61) 66
'>' (62) 80
'[' (91) 93
']' (93) 93
'{' (123) 30 35 42 43 44 45
'}' (125) 30 35 42 43 44 45
error (256)
T_Void (258) 17 37
T_Bool (259) 12
T_Int (260) 10
T_Double (261) 11
T_String (262) 13
T_Class (263) 30
T_LessEqual (264) 79
T_GreaterEqual (265) 81
T_Equal (266) 82
T_NotEqual (267) 83
T_Dims (268) 15
T_And (269) 84
T_Or (270) 85
T_Null (271) 102
T_Extends (272) 24
T_This (273) 69
T_Interface (274) 35
T_Implements (275) 26
T_While (276) 59
T_For (277) 60
T_If (278) 58
T_Else (279) 56
T_Return (280) 61
T_Break (281) 62
T_New (282) 89
T_NewArray (283) 90
T_Print (284) 65
T_ReadInteger (285) 87
T_ReadLine (286) 88
T_Increment (287)
T_Decrement (288)
T_Switch (289)
T_Case (290)
T_Default (291)
T_Identifier (292) 9 14 16 17 22 23 24 30 35 36 37 89 91 92 94 95
T_StringConstant (293) 101
T_IntConstant (294) 98
T_DoubleConstant (295) 99
T_BoolConstant (296) 100
NoElse (297)


Nonterminals, with rules where they appear

$accept (61)
    on left: 0
Program (62)
    on left: 1, on right: 0
DeclP (63)
    on left: 2 3, on right: 1 2
Decl (64)
    on left: 4 5 6 7, on right: 2 3
VarDecl (65)
    on left: 8, on right: 4 31 40 41
Var (66)
    on left: 9, on right: 8 18 19
Type (67)
    on left: 10 11 12 13 14 15, on right: 9 15 16 36 90
FnDecl (68)
    on left: 16 17, on right: 5 32
VarPC (69)
    on left: 18 19, on right: 18 20
Formals (70)
    on left: 20 21, on right: 16 17 36 37
IdentifierPC (71)
    on left: 22 23, on right: 22 26
ExtendsO (72)
    on left: 24 25, on right: 30
ImplementsO (73)
    on left: 26 27, on right: 30
FieldS (74)
    on left: 28 29, on right: 28 30
ClassDecl (75)
    on left: 30, on right: 6
Field (76)
    on left: 31 32, on right: 28
PrototypeS (77)
    on left: 33 34, on right: 33 35
InterfaceDecl (78)
    on left: 35, on right: 7
Prototype (79)
    on left: 36 37, on right: 33
StmtP (80)
    on left: 38 39, on right: 38 42 44
VarDeclP (81)
    on left: 40 41, on right: 40 42 43
StmtBlock (82)
    on left: 42 43 44 45, on right: 16 17 55
ExprO (83)
    on left: 46 47, on right: 48 60 61
Stmt (84)
    on left: 48 49 50 51 52 53 54 55, on right: 38 39 56 58 59 60
ElseO (85)
    on left: 56 57, on right: 58
IfStmt (86)
    on left: 58, on right: 49
WhileStmt (87)
    on left: 59, on right: 50
ForStmt (88)
    on left: 60, on right: 51
ReturnStmt (89)
    on left: 61, on right: 53
BreakStmt (90)
    on left: 62, on right: 52
ExprPC (91)
    on left: 63 64, on right: 63 65 96
PrintStmt (92)
    on left: 65, on right: 54
Expr (93)
    on left: 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83
    84 85 86 87 88 89 90, on right: 46 58 59 60 63 64 66 71 72 73 74
    75 76 77 78 79 80 81 82 83 84 85 86 90 92 93 95
LValue (94)
    on left: 91 92 93, on right: 66 68
Call (95)
    on left: 94 95, on right: 70
Actuals (96)
    on left: 96 97, on right: 94 95
Constant (97)
    on left: 98 99 100 101 102, on right: 67


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclP          go to state 10
    Decl           go to state 11
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 1

   17 FnDecl: T_Void . T_Identifier '(' Formals ')' StmtBlock

    T_Identifier  shift, and go to state 18


state 2

   12 Type: T_Bool .

    $default  reduce using rule 12 (Type)


state 3

   10 Type: T_Int .

    $default  reduce using rule 10 (Type)


state 4

   11 Type: T_Double .

    $default  reduce using rule 11 (Type)


state 5

   13 Type: T_String .

    $default  reduce using rule 13 (Type)


state 6

   30 ClassDecl: T_Class . T_Identifier ExtendsO ImplementsO '{' FieldS '}'

    T_Identifier  shift, and go to state 19


state 7

   35 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeS '}'

    T_Identifier  shift, and go to state 20


state 8

   14 Type: T_Identifier .

    $default  reduce using rule 14 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 21


state 10

    1 Program: DeclP .
    2 DeclP: DeclP . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 22
    VarDecl        go to state 12
    Var            go to state 13
    Type           go to state 14
    FnDecl         go to state 15
    ClassDecl      go to state 16
    InterfaceDecl  go to state 17


state 11

    3 DeclP: Decl .

    $default  reduce using rule 3 (DeclP)


state 12

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 13

    8 VarDecl: Var . ';'

    ';'  shift, and go to state 23


state 14

    9 Var: Type . T_Identifier
   15 Type: Type . T_Dims
   16 FnDecl: Type . T_Identifier '(' Formals ')' StmtBlock

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 25


state 15

    5 Decl: FnDecl .

    $default  reduce using rule 5 (Decl)


state 16

    6 Decl: ClassDecl .

    $default  reduce using rule 6 (Decl)


state 17

    7 Decl: InterfaceDecl .

    $default  reduce using rule 7 (Decl)


state 18

   17 FnDecl: T_Void T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 26


state 19

   30 ClassDecl: T_Class T_Identifier . ExtendsO ImplementsO '{' FieldS '}'

    T_Extends  shift, and go to state 27

    $default  reduce using rule 25 (ExtendsO)

    ExtendsO  go to state 28


state 20

   35 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeS '}'

    '{'  shift, and go to state 29


state 21

    0 $accept: Program $end .

    $default  accept


state 22

    2 DeclP: DeclP Decl .

    $default  reduce using rule 2 (DeclP)


state 23

    8 VarDecl: Var ';' .

    $default  reduce using rule 8 (VarDecl)


state 24

   15 Type: Type T_Dims .

    $default  reduce using rule 15 (Type)


state 25

    9 Var: Type T_Identifier .
   16 FnDecl: Type T_Identifier . '(' Formals ')' StmtBlock

    '('  shift, and go to state 30

    $default  reduce using rule 9 (Var)


state 26

   17 FnDecl: T_Void T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 21 (Formals)

    Var      go to state 31
    Type     go to state 32
    VarPC    go to state 33
    Formals  go to state 34


state 27

   24 ExtendsO: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 35


state 28

   30 ClassDecl: T_Class T_Identifier ExtendsO . ImplementsO '{' FieldS '}'

    T_Implements  shift, and go to state 36

    $default  reduce using rule 27 (ImplementsO)

    ImplementsO  go to state 37


state 29

   35 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeS '}'

    $default  reduce using rule 34 (PrototypeS)

    PrototypeS  go to state 38


state 30

   16 FnDecl: Type T_Identifier '(' . Formals ')' StmtBlock

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 21 (Formals)

    Var      go to state 31
    Type     go to state 32
    VarPC    go to state 33
    Formals  go to state 39


state 31

   19 VarPC: Var .

    $default  reduce using rule 19 (VarPC)


state 32

    9 Var: Type . T_Identifier
   15 Type: Type . T_Dims

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 40


state 33

   18 VarPC: VarPC . ',' Var
   20 Formals: VarPC .

    ','  shift, and go to state 41

    $default  reduce using rule 20 (Formals)


state 34

   17 FnDecl: T_Void T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 42


state 35

   24 ExtendsO: T_Extends T_Identifier .

    $default  reduce using rule 24 (ExtendsO)


state 36

   26 ImplementsO: T_Implements . IdentifierPC

    T_Identifier  shift, and go to state 43

    IdentifierPC  go to state 44


state 37

   30 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO . '{' FieldS '}'

    '{'  shift, and go to state 45


state 38

   33 PrototypeS: PrototypeS . Prototype
   35 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS . '}'

    T_Void        shift, and go to state 46
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 47

    Type       go to state 48
    Prototype  go to state 49


state 39

   16 FnDecl: Type T_Identifier '(' Formals . ')' StmtBlock

    ')'  shift, and go to state 50


state 40

    9 Var: Type T_Identifier .

    $default  reduce using rule 9 (Var)


state 41

   18 VarPC: VarPC ',' . Var

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Var   go to state 51
    Type  go to state 32


state 42

   17 FnDecl: T_Void T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 52

    StmtBlock  go to state 53


state 43

   23 IdentifierPC: T_Identifier .

    $default  reduce using rule 23 (IdentifierPC)


state 44

   22 IdentifierPC: IdentifierPC . ',' T_Identifier
   26 ImplementsO: T_Implements IdentifierPC .

    ','  shift, and go to state 54

    $default  reduce using rule 26 (ImplementsO)


state 45

   30 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' . FieldS '}'

    $default  reduce using rule 29 (FieldS)

    FieldS  go to state 55


state 46

   37 Prototype: T_Void . T_Identifier '(' Formals ')' ';'

    T_Identifier  shift, and go to state 56


state 47

   35 InterfaceDecl: T_Interface T_Identifier '{' PrototypeS '}' .

    $default  reduce using rule 35 (InterfaceDecl)


state 48

   15 Type: Type . T_Dims
   36 Prototype: Type . T_Identifier '(' Formals ')' ';'

    T_Dims        shift, and go to state 24
    T_Identifier  shift, and go to state 57


state 49

   33 PrototypeS: PrototypeS Prototype .

    $default  reduce using rule 33 (PrototypeS)


state 50

   16 FnDecl: Type T_Identifier '(' Formals ')' . StmtBlock

    '{'  shift, and go to state 52

    StmtBlock  go to state 58


state 51

   18 VarPC: VarPC ',' Var .

    $default  reduce using rule 18 (VarPC)


state 52

   42 StmtBlock: '{' . VarDeclP StmtP '}'
   43          | '{' . VarDeclP '}'
   44          | '{' . StmtP '}'
   45          | '{' . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_While           shift, and go to state 61
    T_For             shift, and go to state 62
    T_If              shift, and go to state 63
    T_Return          shift, and go to state 64
    T_Break           shift, and go to state 65
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_Print           shift, and go to state 68
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 71
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78
    '{'               shift, and go to state 52
    '}'               shift, and go to state 79

    $default  reduce using rule 47 (ExprO)

    VarDecl     go to state 80
    Var         go to state 13
    Type        go to state 32
    StmtP       go to state 81
    VarDeclP    go to state 82
    StmtBlock   go to state 83
    ExprO       go to state 84
    Stmt        go to state 85
    IfStmt      go to state 86
    WhileStmt   go to state 87
    ForStmt     go to state 88
    ReturnStmt  go to state 89
    BreakStmt   go to state 90
    PrintStmt   go to state 91
    Expr        go to state 92
    LValue      go to state 93
    Call        go to state 94
    Constant    go to state 95


state 53

   17 FnDecl: T_Void T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 17 (FnDecl)


state 54

   22 IdentifierPC: IdentifierPC ',' . T_Identifier

    T_Identifier  shift, and go to state 96


state 55

   28 FieldS: FieldS . Field
   30 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' FieldS . '}'

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 97

    VarDecl  go to state 98
    Var      go to state 13
    Type     go to state 14
    FnDecl   go to state 99
    Field    go to state 100


state 56

   37 Prototype: T_Void T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 101


state 57

   36 Prototype: Type T_Identifier . '(' Formals ')' ';'

    '('  shift, and go to state 102


state 58

   16 FnDecl: Type T_Identifier '(' Formals ')' StmtBlock .

    $default  reduce using rule 16 (FnDecl)


state 59

  102 Constant: T_Null .

    $default  reduce using rule 102 (Constant)


state 60

   69 Expr: T_This .

    $default  reduce using rule 69 (Expr)


state 61

   59 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 103


state 62

   60 ForStmt: T_For . '(' ExprO ';' Expr ';' ExprO ')' Stmt

    '('  shift, and go to state 104


state 63

   58 IfStmt: T_If . '(' Expr ')' Stmt ElseO

    '('  shift, and go to state 105


state 64

   61 ReturnStmt: T_Return . ExprO ';'

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    $default  reduce using rule 47 (ExprO)

    ExprO     go to state 107
    Expr      go to state 92
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 65

   62 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 108


state 66

   89 Expr: T_New . T_Identifier

    T_Identifier  shift, and go to state 109


state 67

   90 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 110


state 68

   65 PrintStmt: T_Print . '(' ExprPC ')' ';'

    '('  shift, and go to state 111


state 69

   87 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 112


state 70

   88 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 113


state 71

   14 Type: T_Identifier .
   91 LValue: T_Identifier .
   94 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 114

    T_Dims        reduce using rule 14 (Type)
    T_Identifier  reduce using rule 14 (Type)
    $default      reduce using rule 91 (LValue)


state 72

  101 Constant: T_StringConstant .

    $default  reduce using rule 101 (Constant)


state 73

   98 Constant: T_IntConstant .

    $default  reduce using rule 98 (Constant)


state 74

   99 Constant: T_DoubleConstant .

    $default  reduce using rule 99 (Constant)


state 75

  100 Constant: T_BoolConstant .

    $default  reduce using rule 100 (Constant)


state 76

   77 Expr: '-' . Expr

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    Expr      go to state 115
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 77

   86 Expr: '!' . Expr

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    Expr      go to state 116
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 78

   71 Expr: '(' . Expr ')'

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    Expr      go to state 117
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 79

   45 StmtBlock: '{' '}' .

    $default  reduce using rule 45 (StmtBlock)


state 80

   41 VarDeclP: VarDecl .

    $default  reduce using rule 41 (VarDeclP)


state 81

   38 StmtP: StmtP . Stmt
   44 StmtBlock: '{' StmtP . '}'

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_While           shift, and go to state 61
    T_For             shift, and go to state 62
    T_If              shift, and go to state 63
    T_Return          shift, and go to state 64
    T_Break           shift, and go to state 65
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_Print           shift, and go to state 68
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78
    '{'               shift, and go to state 52
    '}'               shift, and go to state 118

    $default  reduce using rule 47 (ExprO)

    StmtBlock   go to state 83
    ExprO       go to state 84
    Stmt        go to state 119
    IfStmt      go to state 86
    WhileStmt   go to state 87
    ForStmt     go to state 88
    ReturnStmt  go to state 89
    BreakStmt   go to state 90
    PrintStmt   go to state 91
    Expr        go to state 92
    LValue      go to state 93
    Call        go to state 94
    Constant    go to state 95


state 82

   40 VarDeclP: VarDeclP . VarDecl
   42 StmtBlock: '{' VarDeclP . StmtP '}'
   43          | '{' VarDeclP . '}'

    T_Bool            shift, and go to state 2
    T_Int             shift, and go to state 3
    T_Double          shift, and go to state 4
    T_String          shift, and go to state 5
    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_While           shift, and go to state 61
    T_For             shift, and go to state 62
    T_If              shift, and go to state 63
    T_Return          shift, and go to state 64
    T_Break           shift, and go to state 65
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_Print           shift, and go to state 68
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 71
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78
    '{'               shift, and go to state 52
    '}'               shift, and go to state 120

    $default  reduce using rule 47 (ExprO)

    VarDecl     go to state 121
    Var         go to state 13
    Type        go to state 32
    StmtP       go to state 122
    StmtBlock   go to state 83
    ExprO       go to state 84
    Stmt        go to state 85
    IfStmt      go to state 86
    WhileStmt   go to state 87
    ForStmt     go to state 88
    ReturnStmt  go to state 89
    BreakStmt   go to state 90
    PrintStmt   go to state 91
    Expr        go to state 92
    LValue      go to state 93
    Call        go to state 94
    Constant    go to state 95


state 83

   55 Stmt: StmtBlock .

    $default  reduce using rule 55 (Stmt)


state 84

   48 Stmt: ExprO . ';'

    ';'  shift, and go to state 123


state 85

   39 StmtP: Stmt .

    $default  reduce using rule 39 (StmtP)


state 86

   49 Stmt: IfStmt .

    $default  reduce using rule 49 (Stmt)


state 87

   50 Stmt: WhileStmt .

    $default  reduce using rule 50 (Stmt)


state 88

   51 Stmt: ForStmt .

    $default  reduce using rule 51 (Stmt)


state 89

   53 Stmt: ReturnStmt .

    $default  reduce using rule 53 (Stmt)


state 90

   52 Stmt: BreakStmt .

    $default  reduce using rule 52 (Stmt)


state 91

   54 Stmt: PrintStmt .

    $default  reduce using rule 54 (Stmt)


state 92

   46 ExprO: Expr .
   72 Expr: Expr . '+' Expr
   73     | Expr . '-' Expr
   74     | Expr . '*' Expr
   75     | Expr . '/' Expr
   76     | Expr . '%' Expr
   78     | Expr . '<' Expr
   79     | Expr . T_LessEqual Expr
   80     | Expr . '>' Expr
   81     | Expr . T_GreaterEqual Expr
   82     | Expr . T_Equal Expr
   83     | Expr . T_NotEqual Expr
   84     | Expr . T_And Expr
   85     | Expr . T_Or Expr
   92 LValue: Expr . '.' T_Identifier
   93       | Expr . '[' Expr ']'
   95 Call: Expr . '.' T_Identifier '(' Actuals ')'

    T_LessEqual     shift, and go to state 124
    T_GreaterEqual  shift, and go to state 125
    T_Equal         shift, and go to state 126
    T_NotEqual      shift, and go to state 127
    T_And           shift, and go to state 128
    T_Or            shift, and go to state 129
    '<'             shift, and go to state 130
    '>'             shift, and go to state 131
    '-'             shift, and go to state 132
    '+'             shift, and go to state 133
    '/'             shift, and go to state 134
    '%'             shift, and go to state 135
    '*'             shift, and go to state 136
    '.'             shift, and go to state 137
    '['             shift, and go to state 138

    $default  reduce using rule 46 (ExprO)


state 93

   66 Expr: LValue . '=' Expr
   68     | LValue .

    '='  shift, and go to state 139

    $default  reduce using rule 68 (Expr)


state 94

   70 Expr: Call .

    $default  reduce using rule 70 (Expr)


state 95

   67 Expr: Constant .

    $default  reduce using rule 67 (Expr)


state 96

   22 IdentifierPC: IdentifierPC ',' T_Identifier .

    $default  reduce using rule 22 (IdentifierPC)


state 97

   30 ClassDecl: T_Class T_Identifier ExtendsO ImplementsO '{' FieldS '}' .

    $default  reduce using rule 30 (ClassDecl)


state 98

   31 Field: VarDecl .

    $default  reduce using rule 31 (Field)


state 99

   32 Field: FnDecl .

    $default  reduce using rule 32 (Field)


state 100

   28 FieldS: FieldS Field .

    $default  reduce using rule 28 (FieldS)


state 101

   37 Prototype: T_Void T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 21 (Formals)

    Var      go to state 31
    Type     go to state 32
    VarPC    go to state 33
    Formals  go to state 140


state 102

   36 Prototype: Type T_Identifier '(' . Formals ')' ';'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 21 (Formals)

    Var      go to state 31
    Type     go to state 32
    VarPC    go to state 33
    Formals  go to state 141


state 103

   59 WhileStmt: T_While '(' . Expr ')' Stmt

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    Expr      go to state 142
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 104

   60 ForStmt: T_For '(' . ExprO ';' Expr ';' ExprO ')' Stmt

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    $default  reduce using rule 47 (ExprO)

    ExprO     go to state 143
    Expr      go to state 92
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 105

   58 IfStmt: T_If '(' . Expr ')' Stmt ElseO

    T_Null            shift, and go to state 59
    T_This            shift, and go to state 60
    T_New             shift, and go to state 66
    T_NewArray        shift, and go to state 67
    T_ReadInteger     shift, and go to state 69
    T_ReadLine        shift, and go to state 70
    T_Identifier      shift, and go to state 106
    T_StringConstant  shift, and go to state 72
    T_IntConstant     shift, and go to state 73
    T_DoubleConstant  shift, and go to state 74
    T_BoolConstant    shift, and go to state 75
    '-'               shift, and go to state 76
    '!'               shift, and go to state 77
    '('               shift, and go to state 78

    Expr      go to state 144
    LValue    go to state 93
    Call      go to state 94
    Constant  go to state 95


state 106

   91 LValue: T_Identifier .
   94 Call: T_Identifier . '(' Actuals ')'

    '('  shift, and go to state 114

    $default  reduce using rule 91 (LValue)


state 107

   61 ReturnStmt: T_Return ExprO . ';'

    ';'  shift, and go to state 145

